5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1791_1622.log
== TEST (2019-05-29 14:15:32) 
-- CODE:
from numpy import*

e = array(eval(int(input("Qtd entraram: "))))
s = array(eval(int(input("Qtd sairam: "))))

print(e , s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:16:20) 
-- CODE:
from numpy import*

e = array(eval(int(input("Qtd entraram: "))))
s = array(eval(int(input("Qtd sairam: "))))

print(e)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:55:57) 
-- CODE:
from numpy import*

s = array(eval(int(input("Qtd sairam: "))))
e = array(eval(int(input("Qtd entraram: "))))

l = 0

while e < l:
	
		
	
print(e)
print(s)
-- ERROR:
File "XXXX", line 12
    print(e)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:03:10) 
-- CODE:
from numpy import*

e = array(eval(int(input("Qtd entraram: "))))
s = array(eval(int(input("Qtd sairam: "))))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:04:26) 
-- CODE:
from numpy import*

e = array(eval(int(input("Qtd entraram: "))))
s = array(eval(int(input("Qtd sairam: "))))

print(e)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:04) 
-- CODE:
from numpy import*

e = array(int(input("Qtd entraram: ")))
s = array(int(input("Qtd sairam: ")))

print(e)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:05:34) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

print(e)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:07:40) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

c = 0

while c < 75:
	c = c + 1 (c = e-s)
	
print(sum(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:08:29) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

c = 0

while c < e:
	c = c + 1 
	
print(sum(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:09:29) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

c = 0

while c < e:
	c = c + (s + e)
	c = c + 1
	
print(sum(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:10:08) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

c = 0

while(c < e):
	c = c + (s + e)
	c = c + 1
	
print(sum(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:10:19) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

c = 0

while(c < e):
	c = c + (s + e)
	c = c + 1
	
print(sum(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:11:39) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

c = 0

while(c < e and s < e):
	c = c + (s + e)
	c = c + 1
	
print(sum(e))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:12:58) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

a= min(e+s)
b= max(e+s)
c= size(e+s)
d= sum(e+s)

print(sum(d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:18) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

a= min(e+s)
b= max(e+s)
c= size(e+s)
d= sum(e+s)

print(sum(d/c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:13:53) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

a= min(s+e)
b= max(s+e)
c= size(s+e)
d= sum(s+e)

print(sum(d/c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:14:22) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

a= min(s+e)
b= max(s+e)
c= size(s+e)
d= sum(s+e)

print(sum(d))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:16:53) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

l = e[0] - s[0] + e[1] - s[1] + e[2] - s[2] + e[3] - s[3]

print(sum(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 15:17:07) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

l = e[0] - s[0] + e[1] - s[1] + e[2] - s[2] + e[3] - s[3]

print(sum(l))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 15:17:26) 
-- CODE:
from numpy import*

e = array(eval(input("Qtd entraram: ")))
s = array(eval(input("Qtd sairam: ")))

l = e[0] - s[0] + e[1] - s[1] + e[2] - s[2] + e[3] - s[3]

print(sum(l))
-- EXECUTION TIME:
0.330602
-- TEST CASE 1:
---- input:
[10,20,15,0]
[0,5,12,0]
---- correct output:
28
---- user output:
28
-- TEST CASE 2:
---- input:
[10,50,15,0]
[0,10,12,4]
---- correct output:
49
---- user output:
49
-- TEST CASE 3:
---- input:
[10,24,2,10]
[5,20,10,4]
---- correct output:
7
---- user output:
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
